[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]


[project]
name = "djaxei"
version = "1.2.2"
description = "A django admin extension for importing exporting records from/to xls/ods"
authors = [
    {"name" = "Giovanni Bronzini", "email" = "g.bronzini@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GigiusB/djaxei.git"
keywords = ["xls",]
include = ["README.md", "HISTORY.md", "Makefile"]
packages = [
    { include = "djaxei", from = "src" },
]

[dependencies]
dependencies = [
    "python=>=3.8.7,<4",
    "django=>=3.2,<5",
    "openpyxl=>=3.0.0"
]

pytz = "^2024.1"

[dependency-groups]
dev = [
  "pytest",
  "pytest-django",
  "flake8",
  "isort",
  "bumpversion",
  "factory-boy",
  "pytest-env",
  "pytest-coverage",
  "pytest-echo",
  "tox"
]

[tool.hatch]
#build.hooks.vcs.version-file = "src/djaxei/version.py"
#version.source = "vcs"
raw-options = { root = ".." }
artifacts = [
    "*.mo",
]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = [ "src/djaxei" ]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = [ "src/djaxei" ]